--- a/main.html
+++ b/main.html
@@ -8,7 +8,63 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+    <h2>List of medias</h2>
+
+    <table>
+        <caption>Roll Numbers and Names</caption>
+        <thead>
+            <tr>
+                <th>Roll Number</th>
+                <th>Name</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>John Doe</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Jane Smith</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Emily Johnson</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <ol>
+        <li>
+            <figure>
+                <img src="https://picsum.photos/id/123/200/300" alt="Random Image from Picsum">
+                <figcaption>Image</figcaption>
+            </figure>
+        </li>
+        <li>
+            <figure>
+                <video controls>
+                    <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+                <figcaption>Video</figcaption>
+            </figure>
+        </li>
+        <li>
+            <figure>
+                <audio controls>
+                    <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+                    Your browser does not support the audio element.
+                </audio>
+                <figcaption>Audio</figcaption>
+            </figure>
+        </li>
+    </ol>
+
+	
+	
+	
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
