--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <h2>List of medias</h2>
+    <!-- <h2>List of medias</h2>
 
     <table>
         <caption>Roll Numbers and Names</caption>
@@ -60,10 +60,52 @@
             </figure>
         </li>
     </ol>
+ -->
+	
+	
 
-	
-	
-	
+
+
+  <table>
+    <thead>
+      <tr>
+        <th>Roll Number</th>
+        <th>Name</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>1</td>
+        <td>John Doe</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>Jane Smith</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>Bob Johnson</td>
+      </tr>
+    </tbody>
+  </table>
+
+  <h2>List of Medias</h2>
+
+  <ol>
+    <li>
+      <img src="https://picsum.photos/id/123/200/300" alt="Random Image">
+    </li>
+    <li>
+      <video controls>
+        <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+      </video>
+    </li>
+    <li>
+      <audio controls>
+        <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
+      </audio>
+    </li>
+  </ol>
 	<script type="text/javascript" src="./script.js">
 </script>
 
