--- a/main.html
+++ b/main.html
@@ -89,11 +89,11 @@
     </tbody>
   </table>
 
-  <h2>List of Medias</h2>
+  <h2>List of medias</h2>
 
   <ol>
     <li>
-      <img src="https://picsum.photos/id/123/200/300" alt="Random Image">
+      <img src="https://picsum.photos/id/123/200/300" alt="Image">
     </li>
     <li>
       <video controls>
@@ -101,8 +101,7 @@
       </video>
     </li>
     <li>
-      <audio controls>
-        <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
+      <audio controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
       </audio>
     </li>
   </ol>
